<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#363636"
    android:paddingVertical="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/text_change_account_image"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_divider"
        app:layout_constraintBottom_toTopOf="@id/ln1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:paddingVertical="10dp"
            android:text="@string/take_take_picture"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:paddingVertical="10dp"
            android:text="@string/text_import_from_gallery"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFromGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:paddingVertical="10dp"
            android:text="@string/text_import_from_google_drive"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>