<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#363636"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/text_change_account_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_divider"
        app:layout_constraintBottom_toTopOf="@id/ln1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_enter_old_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ln1" />

        <EditText
            android:id="@+id/edit_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/shape_empty"
            android:backgroundTint="@null"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:hint="@string/text_old_password"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_enter_new_password"
            android:textColor="@color/white"
            android:textSize="14sp"
             />

        <EditText
            android:id="@+id/edit_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/shape_empty"
            android:backgroundTint="@null"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:hint="@string/text_new_password"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln1"
        android:padding="10dp"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:padding="18dp"
            android:text="Cancel"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
             />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_edit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/lato_regular"
            android:background="@drawable/shape2"
            android:text="@string/text_edit"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>